# genAI_text_enhancer

./: README.md  README.rst  manifest.json  popup.js
backend/: main.py  pyproject.toml
infra/: app.py  infra_stack.py  pyproject.toml
plugin/: manifest.json  popup.html  popup.js
tests/: test_reverse_text_work_correctly.py
