[tool.poetry]
name = "text-improver-backend"
version = "0.1.0"
description = ""
authors = ["anya-mb <anyamb@yandex.ru>"]
readme = "README.md"
packages = [{include = "text_improver_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
