[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["anya-mb <anyamb@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aws-cdk-lib = "^2.104.0"
#constructs = "^10.3.0"
aws-cdk-aws-apigatewayv2-alpha = "^2.104.0a0"
aws-cdk-aws-apigatewayv2-integrations-alpha = "^2.104.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
